--- a/20_Applications/websocket.html
+++ b/20_Applications/websocket.html
@@ -18,7 +18,7 @@
 		</style>
 		
 		<!-- Shape Clip -->
-		<script type="text/javascript" src="ShapeClipAPI.js"></script>
+		<script type="text/javascript" src="../10_Driver/ShapeClipAPI.js"></script>
 		
 		<!-- JQuery -->
 		<script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
