--- a/20_Applications/3x3_grid.html
+++ b/20_Applications/3x3_grid.html
@@ -54,7 +54,7 @@
 						if (y == 2)
 							pad = new ShapeClipHeight({x: __px(pX), y: __px(pY), width: SC_SIZE, height: SC_SIZE});
 						else
-							pad = new ShapeClipv1({x: __px(pX), y: __px(pY), width: SC_SIZE, height: SC_SIZE});
+							pad = new ShapeClip({x: __px(pX), y: __px(pY), width: SC_SIZE, height: SC_SIZE});
 						
 						pad._id = "" + x + "x" + y;
 						pad.outline(true);
