--- a/20_Applications/one_clip.html
+++ b/20_Applications/one_clip.html
@@ -39,7 +39,7 @@
 				var SC_SIZE = __px(20);
 				
 				/**/
-				p1 = new ShapeClipv1({x: 300, y: 100, width: SC_SIZE, height: SC_SIZE});
+				p1 = new ShapeClip({x: 300, y: 100, width: SC_SIZE, height: SC_SIZE});
 				p1.outline(true);
 				p1.pulse();
 				
