--- a/20_Applications/websocket.html
+++ b/20_Applications/websocket.html
@@ -63,7 +63,7 @@
     					pads = [];
 
     					for(var i = 0; i < numClips; i++) {
-    						var clip = new ShapeClipv1({x: 0, y: 0, width: 45, height: 45});
+    						var clip = new ShapeClip({x: 0, y: 0, width: 45, height: 45});
 					        clip.outline(true);
 					        clip.rotate(180);
 					        clip.pulse();
