--- a/20_Applications/profiler_2.html
+++ b/20_Applications/profiler_2.html
@@ -53,8 +53,8 @@
 				
 				// Correct ppi value.
 				var agent = navigator.userAgent.toLowerCase();
-				if (agent.indexOf("windows")) 		{ }
-				else if (agent.indexOf("nexus 5")) 	{ __ppi(445); }
+				//if (agent.indexOf("windows")) 		{ }
+				if 		(agent.indexOf("nexus 5")) 	{ __ppi(445); }
 				else if (agent.indexOf("ipad")) 	{ __ppi(326); }
 				console.log(navigator.userAgent.toLowerCase());
 				//$("#report").text(navigator.userAgent.toLowerCase());
