--- a/20_Applications/3x3_grid.html
+++ b/20_Applications/3x3_grid.html
@@ -4,6 +4,7 @@
 		<title>ShapeClip | Demo Page</title>
 		
 		<!-- Styling -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" />
 		<link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
 		<style>
 			document, body { background-color: black; color: white; } 
