--- a/20_Applications/profiler_2.html
+++ b/20_Applications/profiler_2.html
@@ -386,7 +386,7 @@
 								var lSummaryR = [];
 								var lSummaryG = [];
 								var lSummaryB = [];
-								for (var i=0; i<dRecord.actual.length; ++i)
+								for (var i=0; i<dRecord.actualR.length; ++i)
 								{
 									lSummaryR.push(dRecord.expected - dRecord.actualR[i]);
 									lSummaryG.push(dRecord.expected - dRecord.actualG[i]);
