--- a/20_Applications/profiler_2.html
+++ b/20_Applications/profiler_2.html
@@ -392,9 +392,9 @@
 								var lSummaryB = [];
 								for (var i=0; i<dRecord.actualR.length; ++i)
 								{
-									lSummaryR.push(abs(dRecord.expectedR - dRecord.actualR[i]));
-									lSummaryG.push(abs(dRecord.expectedG - dRecord.actualG[i]));
-									lSummaryB.push(abs(dRecord.expectedB - dRecord.actualB[i]));
+									lSummaryR.push(Math.abs(dRecord.expectedR - dRecord.actualR[i]));
+									lSummaryG.push(Math.abs(dRecord.expectedG - dRecord.actualG[i]));
+									lSummaryB.push(Math.abs(dRecord.expectedB - dRecord.actualB[i]));
 								}
 								dRecord.resultR = average(lSummaryR);
 								dRecord.resultG = average(lSummaryG);
