unconstrainted error axis

--- a/20_Applications/profiler_2.html
+++ b/20_Applications/profiler_2.html
@@ -453,7 +453,7 @@
 								crosshair: { trigger: 'both' },
 								width: 550, height: 550,
 								hAxis : { title: 'Sample Position', minValue : 0, maxValue : lSamples.length },
-								vAxis : { title: 'Delta Error', minValue : 0, maxValue : lSamples.length },
+								vAxis : { title: 'Delta Error' },
 								colors: ['red','green', 'blue'],
 							};
 						
